Projet GL/Projet_GL/src/test/deca/context/valid/increment3/not-bool.deca
//Resultats : 2

{
    boolean bool = true;
    int a,b;
    a = 2;
    b = 3;
    if(bool){
        println(a);
    }
    if(!bool){
        println(b);
    }
}