Projet GL/Projet_GL/src/test/deca/context/invalid/increment2/int-not-bool.deca
// Test int := not bool

// Historique : cree le 11/01/2023

{
    int a = !true;
}